# ingredient-phrase-tagger

./: .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  parse_ingredients.sh  pyproject.toml  setup.py  test_script.py
ingredient_phrase_tagger/: run.py
ingredient_phrase_tagger/processing/: parse_ingredients.py  run.py
ingredient_phrase_tagger/training/: cli.py  labelled_data.py  partitioner.py  tokenizer.py  translator.py  utils.py
input/: ingredients.json  sample_ingredients.json
output/: sample_ingredients.json
scripts/: process_ingredients_for_development.fish
tests/: test_labelled_data.py  test_partitioner.py  test_tokenizer.py  test_translator.py
